--- a/app/app.global.css
+++ b/app/app.global.css
@@ -8,6 +8,8 @@ body {
   background-image: linear-gradient(45deg, rgba(0, 216, 255, 0.5) 10%, rgba(0, 1, 127, 0.7));
   font-family: Arial, Helvetica, Helvetica Neue, serif;
   overflow-y: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 h2 {
